--- a/News Scraping.ipynb
+++ b/News Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,27 @@
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from IPython.display import clear_output"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"font-size:30px;\"> <center> USER AGENTS </center> </h1>"
+    "<h1 style=\"font-size:40px;\"> <center> CONSTANTS </center> </h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "KEYWORD = \"cinayet\"\n",
+    "START_DATE = \"01/01/2022\"\n",
+    "FINISH_DATE = \"31/12/2022\"\n",
+    "MAIN_CATEGORY = \"gundem\"    "
    ]
   },
   {
@@ -34,44 +47,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1592 urls were fetched so far (page number-160)\n",
       "\n",
-      "\n",
-      "1600 urls were collected in 399.9496066570282 second.\n",
-      "4.0 urls were collected per second on average.\n"
+      "1592 urls were collected in 650.4402616024017 second.\n",
+      "2.45 urls were collected per second on average.\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
     "\n",
-    "keyword = \"cinayet\"\n",
-    "start_date = \"01/01/2022\"\n",
-    "finish_date = \"01/01/2023\"\n",
-    "main_category = \"gundem\"    \n",
-    "\n",
     "urls = []\n",
     "titles = []\n",
     "abstracts = []\n",
     "dates = []\n",
     "\n",
-    "url_count = 0\n",
     "service = Service('/chromedriver.exe')\n",
     "service.start()\n",
     "driver = webdriver.Remote(service.service_url)\n",
-    "pages = list(range(1,161))\n",
+    "pages = list(range(1,180))\n",
+    "last_url_count = 0\n",
     "\n",
     "for page in pages:\n",
     "    try:\n",
-    "        search_url = f\"https://www.hurriyet.com.tr/arama/#/?page={page}&key={keyword}&order=Yeniden%20Eskiyewhere=hurriyet&how=Article&and={keyword}&startDate={start_date}&finishDate={finish_date}&platform=hurriyet&mainCategory=/{main_category}/&isDetail=true\"\n",
+    "        search_url = f\"https://www.hurriyet.com.tr/arama/#/?page={page}&key={KEYWORD}&order=Yeniden%20Eskiyewhere=hurriyet&how=Article&and={KEYWORD}&startDate={START_DATE}&finishDate={FINISH_DATE}&platform=hurriyet&mainCategory=/{MAIN_CATEGORY}/&isDetail=true\"\n",
     "        driver.get(search_url)\n",
-    "        time.sleep(1)\n",
+    "        time.sleep(3)\n",
     "        div_content_tags = driver.find_elements(By.XPATH,\"//div[@class='hs-cnn-content']\")\n",
     "        for div_content_tag in div_content_tags:\n",
     "            a_tag = div_content_tag.find_element(By.TAG_NAME,\"a\")\n",
@@ -85,21 +93,24 @@
     "        p_date_tags = driver.find_elements(By.XPATH,\"//p[@class='hs-cnncc-date']\")\n",
     "        for p_date_tag in p_date_tags:\n",
     "            dates.append(p_date_tag.get_attribute(\"innerHTML\")) \n",
-    "        url_count += 10\n",
-    "        print(f\"{url_count} urls were fetched so far\", sep=' ', end='', flush=True)\n",
+    "        if last_url_count == len(urls):\n",
+    "            break\n",
+    "        last_url_count = len(urls)\n",
+    "        clear_output(wait=True)\n",
+    "        print(f\"{len(urls)} urls were fetched so far (page number-{page})\", sep=' ', end='', flush=True)\n",
     "    except Exception as e: \n",
     "        print(e)\n",
     "        print(\"Last Page\")\n",
     "        break\n",
     "    \n",
     "driver.quit()  \n",
-    "print(f\"\\n\\n{url_count} urls were collected in {time.time() - start} second.\")\n",
-    "print(f\"{round(url_count / (time.time() - start), 2)} urls were collected per second on average.\")"
+    "print(f\"\\n\\n{len(urls)} urls were collected in {time.time() - start} second.\")\n",
+    "print(f\"{round(len(urls) / (time.time() - start), 2)} urls were collected per second on average.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -126,156 +137,162 @@
        "      <th>url</th>\n",
        "      <th>title</th>\n",
        "      <th>abstract</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1.1.2023</th>\n",
-       "      <td>http://www.hurriyet.com.tr/gundem/manisa-saruh...</td>\n",
-       "      <td>Manisa Saruhanlı'da korkunç olay! Üç eşini de ...</td>\n",
-       "      <td>Necati Akpınar (58), 1 ay önce dini nikahla bi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.1.2023</th>\n",
-       "      <td>http://www.hurriyet.com.tr/gundem/o-cinayette-...</td>\n",
-       "      <td>O cinayette 3 gözaltı</td>\n",
-       "      <td>Ankara’da, eski Ülkü Ocakları Eğitim ve Kültür...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31.12.2022</th>\n",
+       "      <th>0</th>\n",
        "      <td>http://www.hurriyet.com.tr/gundem/ankarada-sil...</td>\n",
        "      <td>Ankara’da silahlı kavga: 3 ölü, 1 yaralı</td>\n",
        "      <td>Ankara’nın Mamak ilçesinde bir kafede çıkan si...</td>\n",
+       "      <td>31.12.2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30.12.2022</th>\n",
+       "      <th>1</th>\n",
        "      <td>http://www.hurriyet.com.tr/gundem/copu-dokmeye...</td>\n",
        "      <td>Çöpü dökmeyen kardeşini 38 yerinden bıçaklayar...</td>\n",
        "      <td>Ankara'da çöpü dökmesini isteyince kendisini t...</td>\n",
+       "      <td>30.12.2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30.12.2022</th>\n",
+       "      <th>2</th>\n",
        "      <td>http://www.hurriyet.com.tr/gundem/bayrampasada...</td>\n",
        "      <td>Bayrampaşa'da korkunç olay! Önce darbettiler s...</td>\n",
        "      <td>İstanbul Bayrampaşa'da bir eğlence mekanında M...</td>\n",
+       "      <td>30.12.2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>http://www.hurriyet.com.tr/gundem/silanin-kati...</td>\n",
+       "      <td>Sıla’nın katiline ağırlaştırılmış müebbet</td>\n",
+       "      <td>16 yaşındaki Sıla Şentürk’ü boğazını keserek ö...</td>\n",
+       "      <td>30.12.2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>http://www.hurriyet.com.tr/gundem/cem-garipogl...</td>\n",
+       "      <td>Cem Garipoğlu'nun mezarının açılmasına verilen...</td>\n",
+       "      <td>13 yıl önce vahşice öldürülen Münevver Karabul...</td>\n",
+       "      <td>29.12.2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2.1.2022</th>\n",
+       "      <th>1587</th>\n",
        "      <td>http://www.hurriyet.com.tr/gundem/kirsehirde-a...</td>\n",
        "      <td>Kırşehir'de ağabey-kardeş, 23 gün arayla öldür...</td>\n",
        "      <td>Kırşehir'in Kaman ilçesinde husumetlileri tara...</td>\n",
+       "      <td>2.1.2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1.1.2022</th>\n",
+       "      <th>1588</th>\n",
        "      <td>http://www.hurriyet.com.tr/gundem/eglence-cina...</td>\n",
        "      <td>Eğlence cinayetine ömür boyu hapis cezası</td>\n",
        "      <td>Bursa’da, arkadaşlarıyla eğlenmek için gittiği...</td>\n",
+       "      <td>1.1.2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1.1.2022</th>\n",
+       "      <th>1589</th>\n",
        "      <td>http://www.hurriyet.com.tr/gundem/bagcilarda-y...</td>\n",
        "      <td>Bağcılar’daki cinayet, intihar çıktı: Hepinizi...</td>\n",
        "      <td>Bağcılar’da yılbaşı gecesi 14 yaşındaki Hüseyi...</td>\n",
+       "      <td>1.1.2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1.1.2022</th>\n",
+       "      <th>1590</th>\n",
        "      <td>http://www.hurriyet.com.tr/gundem/arkadas-grub...</td>\n",
        "      <td>Arkadaş grubunun yılbaşı eğlencesinde bıçaklı ...</td>\n",
        "      <td>Tokat'ın Erbaa ilçesinde Nurettin Öztürk (56),...</td>\n",
+       "      <td>1.1.2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1.1.2022</th>\n",
+       "      <th>1591</th>\n",
        "      <td>http://www.hurriyet.com.tr/gundem/rahat-uyu-ce...</td>\n",
        "      <td>Rahat uyu Ceren</td>\n",
        "      <td>Akademisyen Ceren Damar Şenel’in vahşice öldür...</td>\n",
+       "      <td>1.1.2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1595 rows × 3 columns</p>\n",
+       "<p>1592 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                          url  \\\n",
-       "date                                                            \n",
-       "1.1.2023    http://www.hurriyet.com.tr/gundem/manisa-saruh...   \n",
-       "1.1.2023    http://www.hurriyet.com.tr/gundem/o-cinayette-...   \n",
-       "31.12.2022  http://www.hurriyet.com.tr/gundem/ankarada-sil...   \n",
-       "30.12.2022  http://www.hurriyet.com.tr/gundem/copu-dokmeye...   \n",
-       "30.12.2022  http://www.hurriyet.com.tr/gundem/bayrampasada...   \n",
-       "...                                                       ...   \n",
-       "2.1.2022    http://www.hurriyet.com.tr/gundem/kirsehirde-a...   \n",
-       "1.1.2022    http://www.hurriyet.com.tr/gundem/eglence-cina...   \n",
-       "1.1.2022    http://www.hurriyet.com.tr/gundem/bagcilarda-y...   \n",
-       "1.1.2022    http://www.hurriyet.com.tr/gundem/arkadas-grub...   \n",
-       "1.1.2022    http://www.hurriyet.com.tr/gundem/rahat-uyu-ce...   \n",
+       "                                                    url  \\\n",
+       "0     http://www.hurriyet.com.tr/gundem/ankarada-sil...   \n",
+       "1     http://www.hurriyet.com.tr/gundem/copu-dokmeye...   \n",
+       "2     http://www.hurriyet.com.tr/gundem/bayrampasada...   \n",
+       "3     http://www.hurriyet.com.tr/gundem/silanin-kati...   \n",
+       "4     http://www.hurriyet.com.tr/gundem/cem-garipogl...   \n",
+       "...                                                 ...   \n",
+       "1587  http://www.hurriyet.com.tr/gundem/kirsehirde-a...   \n",
+       "1588  http://www.hurriyet.com.tr/gundem/eglence-cina...   \n",
+       "1589  http://www.hurriyet.com.tr/gundem/bagcilarda-y...   \n",
+       "1590  http://www.hurriyet.com.tr/gundem/arkadas-grub...   \n",
+       "1591  http://www.hurriyet.com.tr/gundem/rahat-uyu-ce...   \n",
        "\n",
-       "                                                        title  \\\n",
-       "date                                                            \n",
-       "1.1.2023    Manisa Saruhanlı'da korkunç olay! Üç eşini de ...   \n",
-       "1.1.2023                                O cinayette 3 gözaltı   \n",
-       "31.12.2022           Ankara’da silahlı kavga: 3 ölü, 1 yaralı   \n",
-       "30.12.2022  Çöpü dökmeyen kardeşini 38 yerinden bıçaklayar...   \n",
-       "30.12.2022  Bayrampaşa'da korkunç olay! Önce darbettiler s...   \n",
-       "...                                                       ...   \n",
-       "2.1.2022    Kırşehir'de ağabey-kardeş, 23 gün arayla öldür...   \n",
-       "1.1.2022            Eğlence cinayetine ömür boyu hapis cezası   \n",
-       "1.1.2022    Bağcılar’daki cinayet, intihar çıktı: Hepinizi...   \n",
-       "1.1.2022    Arkadaş grubunun yılbaşı eğlencesinde bıçaklı ...   \n",
-       "1.1.2022                                      Rahat uyu Ceren   \n",
+       "                                                  title  \\\n",
+       "0              Ankara’da silahlı kavga: 3 ölü, 1 yaralı   \n",
+       "1     Çöpü dökmeyen kardeşini 38 yerinden bıçaklayar...   \n",
+       "2     Bayrampaşa'da korkunç olay! Önce darbettiler s...   \n",
+       "3             Sıla’nın katiline ağırlaştırılmış müebbet   \n",
+       "4     Cem Garipoğlu'nun mezarının açılmasına verilen...   \n",
+       "...                                                 ...   \n",
+       "1587  Kırşehir'de ağabey-kardeş, 23 gün arayla öldür...   \n",
+       "1588          Eğlence cinayetine ömür boyu hapis cezası   \n",
+       "1589  Bağcılar’daki cinayet, intihar çıktı: Hepinizi...   \n",
+       "1590  Arkadaş grubunun yılbaşı eğlencesinde bıçaklı ...   \n",
+       "1591                                    Rahat uyu Ceren   \n",
        "\n",
-       "                                                     abstract  \n",
-       "date                                                           \n",
-       "1.1.2023    Necati Akpınar (58), 1 ay önce dini nikahla bi...  \n",
-       "1.1.2023    Ankara’da, eski Ülkü Ocakları Eğitim ve Kültür...  \n",
-       "31.12.2022  Ankara’nın Mamak ilçesinde bir kafede çıkan si...  \n",
-       "30.12.2022  Ankara'da çöpü dökmesini isteyince kendisini t...  \n",
-       "30.12.2022  İstanbul Bayrampaşa'da bir eğlence mekanında M...  \n",
-       "...                                                       ...  \n",
-       "2.1.2022    Kırşehir'in Kaman ilçesinde husumetlileri tara...  \n",
-       "1.1.2022    Bursa’da, arkadaşlarıyla eğlenmek için gittiği...  \n",
-       "1.1.2022    Bağcılar’da yılbaşı gecesi 14 yaşındaki Hüseyi...  \n",
-       "1.1.2022    Tokat'ın Erbaa ilçesinde Nurettin Öztürk (56),...  \n",
-       "1.1.2022    Akademisyen Ceren Damar Şenel’in vahşice öldür...  \n",
+       "                                               abstract        date  \n",
+       "0     Ankara’nın Mamak ilçesinde bir kafede çıkan si...  31.12.2022  \n",
+       "1     Ankara'da çöpü dökmesini isteyince kendisini t...  30.12.2022  \n",
+       "2     İstanbul Bayrampaşa'da bir eğlence mekanında M...  30.12.2022  \n",
+       "3     16 yaşındaki Sıla Şentürk’ü boğazını keserek ö...  30.12.2022  \n",
+       "4     13 yıl önce vahşice öldürülen Münevver Karabul...  29.12.2022  \n",
+       "...                                                 ...         ...  \n",
+       "1587  Kırşehir'in Kaman ilçesinde husumetlileri tara...    2.1.2022  \n",
+       "1588  Bursa’da, arkadaşlarıyla eğlenmek için gittiği...    1.1.2022  \n",
+       "1589  Bağcılar’da yılbaşı gecesi 14 yaşındaki Hüseyi...    1.1.2022  \n",
+       "1590  Tokat'ın Erbaa ilçesinde Nurettin Öztürk (56),...    1.1.2022  \n",
+       "1591  Akademisyen Ceren Damar Şenel’in vahşice öldür...    1.1.2022  \n",
        "\n",
-       "[1595 rows x 3 columns]"
+       "[1592 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "scraped_urls = pd.DataFrame({\"url\":urls, \"title\":titles, \"abstract\":abstracts, \"date\":dates })\n",
-    "scraped_urls.set_index(\"date\")"
+    "#scraped_urls.set_index(\"date\")\n",
+    "scraped_urls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scraped_urls.to_excel(\"outputs/scraped_urls.xlsx\")"
+    "file_name = KEYWORD + \"-\" + START_DATE[-4:] + \"-\" + MAIN_CATEGORY\n",
+    "scraped_urls.to_excel(f\"outputs/scraped_urls-{file_name}.xlsx\")\n",
+    "scraped_urls.to_csv(f\"outputs/scraped_urls-{file_name}.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"font-size:30px;\"> <center> COLLECT NEWS CONTENTS </center> </h1>"
+    "<h1 style=\"font-size:40px;\"> <center> COLLECT NEWS CONTENTS </center> </h1>"
    ]
   },
   {
