feature: chatgpt api text analyzing

--- a/News Scraping.ipynb
+++ b/News Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "KEYWORD = \"cinayet\"\n",
     "START_DATE = \"01/01/2016\"\n",
     "FINISH_DATE = \"31/12/2016\"\n",
-    "MAIN_CATEGORY = \"gundem\"    "
+    "MAIN_CATEGORY = \"gundem\"    \n",
+    "file_name = KEYWORD + \"-\" + START_DATE[-4:] + \"-\" + MAIN_CATEGORY"
    ]
   },
   {
@@ -153,9 +154,13 @@
     "abstracts = []\n",
     "dates = []\n",
     "\n",
+    "options = webdriver.ChromeOptions()\n",
+    "options.add_argument('--ignore-certificate-errors')\n",
+    "options.add_argument('--incognito')\n",
+    "options.add_argument('--headless')\n",
     "service = Service('/chromedriver.exe')\n",
     "service.start()\n",
-    "driver = webdriver.Remote(service.service_url)\n",
+    "driver = webdriver.Remote(service.service_url, chrome_options=options)\n",
     "pages = list(range(1,180))\n",
     "last_url_count = 0\n",
     "\n",
@@ -367,7 +372,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = KEYWORD + \"-\" + START_DATE[-4:] + \"-\" + MAIN_CATEGORY\n",
     "scraped_urls.to_excel(f\"outputs/without detailed content/xlsx/scraped_urls-{file_name}.xlsx\")\n",
     "scraped_urls.to_csv(f\"outputs/without detailed content/csv/scraped_urls-{file_name}.csv\")"
    ]
@@ -543,7 +547,6 @@
     }
    ],
    "source": [
-    "file_name = KEYWORD + \"-\" + START_DATE[-4:] + \"-\" + MAIN_CATEGORY\n",
     "scraped_urls = pd.read_csv(f\"outputs/without detailed content/csv/scraped_urls-{file_name}.csv\").drop([\"Unnamed: 0\"], axis=1)\n",
     "scraped_urls"
    ]
@@ -806,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +818,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>url</th>\n",
+       "      <th>title</th>\n",
+       "      <th>abstract</th>\n",
+       "      <th>date</th>\n",
+       "      <th>long-content</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>http://www.hurriyet.com.tr/gundem/kiz-bulacagi...</td>\n",
+       "      <td>'Kız bulacağım' dedi öldürüp çöpe attı</td>\n",
+       "      <td>Bursa’da 9 aydır aranan Hüseyin Altı’yı, arkad...</td>\n",
+       "      <td>30.12.2016</td>\n",
+       "      <td>BURSA’nın Nilüfer ilçesinde yaşayan inşaat işç...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>http://www.hurriyet.com.tr/gundem/kaderin-kati...</td>\n",
+       "      <td>Kader'in katil zanlısının savunması çileden çı...</td>\n",
+       "      <td>Eskişehir'de ormanlık alana götürdüğü 17 yaşın...</td>\n",
+       "      <td>30.12.2016</td>\n",
+       "      <td>Olay geçen 28 Temmuz’da Eskişehir’in kent merk...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>http://www.hurriyet.com.tr/gundem/bir-annenin-...</td>\n",
+       "      <td>Bir annenin en acı isteği... 'Bir kurşun da ba...</td>\n",
+       "      <td>Eskişehir'de 17 yaşındaki Kader Kaya'ya tecavü...</td>\n",
+       "      <td>30.12.2016</td>\n",
+       "      <td>Eskişehir’de amatör olarak fotomodellik yapan ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>http://www.hurriyet.com.tr/gundem/istanbuldaki...</td>\n",
+       "      <td>İstanbul’daki vahşi cinayet 3 yıl sonra ortaya...</td>\n",
+       "      <td>İstanbul’da 3 yıl önce esrarengiz bir şekilde ...</td>\n",
+       "      <td>30.12.2016</td>\n",
+       "      <td>Olaya karışan 12 kişi polis tarafından gözaltı...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>http://www.hurriyet.com.tr/gundem/korkunc-cina...</td>\n",
+       "      <td>Korkunç cinayet aylar sonra çözüldü! Katilden ...</td>\n",
+       "      <td>Bursa'da gözaltına alınan zanlı, yaklaşık 9 ay...</td>\n",
+       "      <td>30.12.2016</td>\n",
+       "      <td>Nilüfer ilçesi Çalı Mahallesi'nde yaşayan inşa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1277</th>\n",
+       "      <td>1277</td>\n",
+       "      <td>http://www.hurriyet.com.tr/gundem/hrant-dink-d...</td>\n",
+       "      <td>Hrant Dink davasında çelişkili ifadeler</td>\n",
+       "      <td>MİT’çi: Genelkurmay evrak almaya gönderdi, tes...</td>\n",
+       "      <td>3.1.2016</td>\n",
+       "      <td>HRANT Dink’in 2004 yılında İstanbul Valiliği’n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1278</th>\n",
+       "      <td>1278</td>\n",
+       "      <td>http://www.hurriyet.com.tr/gundem/istanbulda-s...</td>\n",
+       "      <td>İstanbul'da Suudi Arabistan protestosu</td>\n",
+       "      <td>Dünya Caferi Alimler Birliği (CABİR) üyeleri, ...</td>\n",
+       "      <td>3.1.2016</td>\n",
+       "      <td>Suudi Arabistan'ın İstanbul Başkonsolosluğu ön...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1279</th>\n",
+       "      <td>1279</td>\n",
+       "      <td>http://www.hurriyet.com.tr/gundem/is-adami-vur...</td>\n",
+       "      <td>İş adamı vuruldu, kurt köpekli komşu kaçtı</td>\n",
+       "      <td>Beykoz'da&amp;nbsp;Baklacı Mahallesi Evren Sokak’t...</td>\n",
+       "      <td>2.1.2016</td>\n",
+       "      <td>\\n3 gün önce Romanya’dan gelen babaları Vural’...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1280</th>\n",
+       "      <td>1280</td>\n",
+       "      <td>http://www.hurriyet.com.tr/gundem/kar-temizley...</td>\n",
+       "      <td>Kar temizleyen işçiler son yolculuklarına uğur...</td>\n",
+       "      <td>TEM Otoyolu Ümraniye mevkiinde kar temizleme ç...</td>\n",
+       "      <td>2.1.2016</td>\n",
+       "      <td>Abdullah Ceylan (52) ve Alican Gürkan'ın (53) ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1281</th>\n",
+       "      <td>1281</td>\n",
+       "      <td>http://www.hurriyet.com.tr/gundem/kopek-cinaye...</td>\n",
+       "      <td>Köpek cinayetinin şüphelisi toz oldu</td>\n",
+       "      <td>İstanbul Beykoz’da köpekleri tasmasız gezdirme...</td>\n",
+       "      <td>2.1.2016</td>\n",
+       "      <td>\\nİstanbul’da yeni yılın ilk cinayeti köpek yü...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1282 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0                                                url  \\\n",
+       "0              0  http://www.hurriyet.com.tr/gundem/kiz-bulacagi...   \n",
+       "1              1  http://www.hurriyet.com.tr/gundem/kaderin-kati...   \n",
+       "2              2  http://www.hurriyet.com.tr/gundem/bir-annenin-...   \n",
+       "3              3  http://www.hurriyet.com.tr/gundem/istanbuldaki...   \n",
+       "4              4  http://www.hurriyet.com.tr/gundem/korkunc-cina...   \n",
+       "...          ...                                                ...   \n",
+       "1277        1277  http://www.hurriyet.com.tr/gundem/hrant-dink-d...   \n",
+       "1278        1278  http://www.hurriyet.com.tr/gundem/istanbulda-s...   \n",
+       "1279        1279  http://www.hurriyet.com.tr/gundem/is-adami-vur...   \n",
+       "1280        1280  http://www.hurriyet.com.tr/gundem/kar-temizley...   \n",
+       "1281        1281  http://www.hurriyet.com.tr/gundem/kopek-cinaye...   \n",
+       "\n",
+       "                                                  title  \\\n",
+       "0                'Kız bulacağım' dedi öldürüp çöpe attı   \n",
+       "1     Kader'in katil zanlısının savunması çileden çı...   \n",
+       "2     Bir annenin en acı isteği... 'Bir kurşun da ba...   \n",
+       "3     İstanbul’daki vahşi cinayet 3 yıl sonra ortaya...   \n",
+       "4     Korkunç cinayet aylar sonra çözüldü! Katilden ...   \n",
+       "...                                                 ...   \n",
+       "1277            Hrant Dink davasında çelişkili ifadeler   \n",
+       "1278             İstanbul'da Suudi Arabistan protestosu   \n",
+       "1279         İş adamı vuruldu, kurt köpekli komşu kaçtı   \n",
+       "1280  Kar temizleyen işçiler son yolculuklarına uğur...   \n",
+       "1281               Köpek cinayetinin şüphelisi toz oldu   \n",
+       "\n",
+       "                                               abstract        date  \\\n",
+       "0     Bursa’da 9 aydır aranan Hüseyin Altı’yı, arkad...  30.12.2016   \n",
+       "1     Eskişehir'de ormanlık alana götürdüğü 17 yaşın...  30.12.2016   \n",
+       "2     Eskişehir'de 17 yaşındaki Kader Kaya'ya tecavü...  30.12.2016   \n",
+       "3     İstanbul’da 3 yıl önce esrarengiz bir şekilde ...  30.12.2016   \n",
+       "4     Bursa'da gözaltına alınan zanlı, yaklaşık 9 ay...  30.12.2016   \n",
+       "...                                                 ...         ...   \n",
+       "1277  MİT’çi: Genelkurmay evrak almaya gönderdi, tes...    3.1.2016   \n",
+       "1278  Dünya Caferi Alimler Birliği (CABİR) üyeleri, ...    3.1.2016   \n",
+       "1279  Beykoz'da&nbsp;Baklacı Mahallesi Evren Sokak’t...    2.1.2016   \n",
+       "1280  TEM Otoyolu Ümraniye mevkiinde kar temizleme ç...    2.1.2016   \n",
+       "1281  İstanbul Beykoz’da köpekleri tasmasız gezdirme...    2.1.2016   \n",
+       "\n",
+       "                                           long-content  \n",
+       "0     BURSA’nın Nilüfer ilçesinde yaşayan inşaat işç...  \n",
+       "1     Olay geçen 28 Temmuz’da Eskişehir’in kent merk...  \n",
+       "2     Eskişehir’de amatör olarak fotomodellik yapan ...  \n",
+       "3     Olaya karışan 12 kişi polis tarafından gözaltı...  \n",
+       "4     Nilüfer ilçesi Çalı Mahallesi'nde yaşayan inşa...  \n",
+       "...                                                 ...  \n",
+       "1277  HRANT Dink’in 2004 yılında İstanbul Valiliği’n...  \n",
+       "1278  Suudi Arabistan'ın İstanbul Başkonsolosluğu ön...  \n",
+       "1279  \\n3 gün önce Romanya’dan gelen babaları Vural’...  \n",
+       "1280  Abdullah Ceylan (52) ve Alican Gürkan'ın (53) ...  \n",
+       "1281  \\nİstanbul’da yeni yılın ilk cinayeti köpek yü...  \n",
+       "\n",
+       "[1282 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(f\"outputs/with detailed content/csv/scraped_urls_with_detailed_content-{file_name}.csv\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,32 +1058,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hüseyin Altı, Male, Firdes Altı, Female, Nilüfer, 26/03/2020\n",
+      "\n",
+      "\n",
+      "Metin Yılmaz, Male, Kader Kaya, Female, Eskişehir, 28/07/2016, XXX, XXX\n",
+      "\n",
+      "\n",
+      "Metin Y., Male, Kader Kaya, Female, Eskişehir, 29/07/2020, XXX\n",
+      "\n",
+      "\n",
+      "Hakan Öner,Male,Nursen E.,Female,Güngören,XXX,XXX\n",
+      "\n",
+      "\n",
+      "Hüseyin Altı,Male,Firdes Altı,Female,Nilüfer,26/03/2020\n",
+      "\n",
+      "\n",
+      "\n",
+      "Content of 4 urls were analyzed in 9.908004522323608 second.\n",
+      "Content of 0.4 urls were analyzed per second on average.\n"
+     ]
+    }
+   ],
    "source": [
     "start = time.time()\n",
     "\n",
-    "with open('scraped_news_contents.txt') as f:\n",
-    "    scraped_news_content = f.read()\n",
-    "f = open(\"analyzed_news_details.txt\", \"a\")\n",
-    "i=0\n",
-    "for news_content in scraped_news_content.split(\"DELIMITER\"):\n",
-    "    print(i)\n",
-    "    i+=1\n",
-    "    question = \"Please tell me the name and gender of the person who kills, \\\n",
-    "    the name and the gender of the person who is killed, and date in a uniform format like this: name_of_killer, gender_of killer, name_of_killed, gender_of_killed, date   \\\n",
-    "    according to this new: (Thank you) \"\n",
-    "    question += news_content\n",
+    "\n",
+    "for i in range(5):\n",
+    "    question = \"\"\"Please tell me these information regarding the turkish news content I gave to you in a uniform format:\n",
+    "    -name of the person who is the killer (name and surname or abbreviation)\n",
+    "    -gender of the person who is the killer (male or female)\n",
+    "    -name of the person who is the killed (name and surname or abbreviation)\n",
+    "    -gender of the person who is the killed (male or female)\n",
+    "    -location of the event (only one word for city name)\n",
+    "    -date (in this format: DD/MM/YYYY)\n",
+    "    if any of these bullet points in the news content is lack, then fill them with 'XXX' (Thank you)\n",
+    "    and just give one line, each data separeted by comma in the order of above bullets for each news content\n",
+    "    the content is this: \"\"\"\n",
+    "    question += df.iloc[i][\"long-content\"]\n",
     "    answer = generate_response(question)\n",
-    "    print(\"answer given\")\n",
-    "    result = answer + \"\\nDELIMITER\\n\"\n",
-    "    f.write(result)\n",
-    "    print(answer)\n",
+    "    result = answer + \"\\n\"\n",
+    "    print(result)\n",
     "    \n",
-    "f.close()\n",
-    "print(f\"{len(urls)} urls were fetched in {time.time() - start} second.\")\n",
-    "print(f\"{round(len(urls) / (time.time() - start), 2)} urls were fetched per second on average.\")"
+    "print(f\"\\n\\nContent of {i} urls were analyzed in {time.time() - start} second.\")\n",
+    "print(f\"Content of {round(i / (time.time() - start), 2)} urls were analyzed per second on average.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BURSA’nın Nilüfer ilçesinde yaşayan inşaat işçisi Hüseyin Altı\\'nın (34) annesi Firdes Altı, ulaşamadığı oğluyla ilgili 26 Mart\\'ta kayıp müracaatında bulundu. Telefon kayıtları ile güvenlik kameralarını inceleyen polis, Altı\\'nın kaybolduğu gün Akif Tamtürk \\xa0(42) ile birçok kez telefonla görüştüğünü tespit etti. Gözaltına alınan Tamtürk, sorguda Altı\\'yı öldürdüğünü itiraf etti. \\xa0EVLENMEK İSTİYORDUTamtürk’ün fadesi özetle şöyle: “Hüseyin bekârdı, evlenmek istiyordu. ‘Sana yuva kurman için kız bulabilirim’ dedim. Üsküp’te güzel bir kızın olduğunu işi bağlamak için paraya ihtiyaç duyulacağını söyledim. 44 bin TL aldım. Parayı eğlence mekanlarında harcadım. Hüseyin’e \\xa0‘Kız yok, paranı yedim.’ dedim. Sinirlendi, boğuşma oldu. Defalarca bıçakladım. Öldüğünü anlayınca küvete götürdüm. \\xa0Beş parçaya böldüm. Bu parçaları marketten aldığım çöp poşetine koydum. Sonra pazar arabası ile çöp konteynırlarına attım. Bazılarını yanıma alıp minibüse binerek boş araziye bıraktım.\" \\xa0\\xa0\\n'"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0][\"long-content\"]"
    ]
   },
   {
